# langchain-rag-aws-terraform-docs

./: .env.example  .gitignore  CLAUDE.md  LESSON.md  README.md  docker-compose.yml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: config.py  deps.py  main.py  models.py
api/app/api/: ask.py  health.py  ingest.py
api/app/ingestion/: loaders.py  pipeline.py  splitter.py
api/app/rag/: chain.py  prompts.py  retriever.py
api/tests/: test_loader.py
api/tests/fixtures/terraform/: iam_role_smoke.html.markdown
scripts/: bootstrap_ollama.sh  fetch_docs.sh  smoke_test.sh
