[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-api"
version = "0.1.0"
description = "Local-first RAG over Terraform AWS + AWS IAM docs"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "chromadb>=1.5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
